scripts/nullness/wpi/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8.txt
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/entities/Fahrlehrerindaten.java:82: error: (dereference.of.nullable) $$ 1 $$ this.theoriestunde $$ ( 1903, 1921 ) $$ dereference of possibly-null reference this.theoriestunde
		this.theoriestunde.add(stunde);
		    ^
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/entities/Fahrlehrerindaten.java:91: error: (dereference.of.nullable) $$ 1 $$ this.fahrstunde $$ ( 2123, 2138 ) $$ dereference of possibly-null reference this.fahrstunde
		this.fahrstunde.add(stunde);
		    ^
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/entities/Fahrlehrerindaten.java:104: error: (dereference.of.nullable) $$ 1 $$ this.fahrstunde $$ ( 2472, 2487 ) $$ dereference of possibly-null reference this.fahrstunde
		for (int i=0;i<this.fahrstunde.size();i++) {
		                   ^
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/entities/Fahrlehrerindaten.java:113: error: (dereference.of.nullable) $$ 1 $$ this.theoriestunde $$ ( 2823, 2841 ) $$ dereference of possibly-null reference this.theoriestunde
		for (int i=0;i<this.theoriestunde.size();i++) {
		                   ^
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/entities/Fahrlehrerindaten.java:145: error: (dereference.of.nullable) $$ 1 $$ this.theoriestunde $$ ( 3625, 3643 ) $$ dereference of possibly-null reference this.theoriestunde
		if (this.theoriestunde.size()!=0) {
		        ^
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/entities/Fahrlehrerindaten.java:168: error: (dereference.of.nullable) $$ 1 $$ this.fahrstunde $$ ( 4212, 4227 ) $$ dereference of possibly-null reference this.fahrstunde
		if (this.fahrstunde.size()!=0) {
		        ^
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/Systemereignis.java:58: error: (dereference.of.nullable) $$ 1 $$ nachricht $$ ( 1011, 1020 ) $$ dereference of possibly-null reference nachricht
		return nachricht.name();
		       ^
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/entities/Fahrschueler.java:180: error: (dereference.of.nullable) $$ 1 $$ this.get_fahrlehrerindaten() $$ ( 4767, 4795 ) $$ dereference of possibly-null reference this.get_fahrlehrerindaten()
				+ ", Fahrlehrerin: " + this.get_fahrlehrerindaten().get_name()
				                                                 ^
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/controls/Ressourcenverwaltung.java:215: error: (dereference.of.nullable) $$ 1 $$ this.find_fahrlehrerin(name).get_zugewiesenes_auto() $$ ( 6744, 6796 ) $$ dereference of possibly-null reference this.find_fahrlehrerin(name).get_zugewiesenes_auto()
		if (this.find_fahrlehrerin(name)==null || this.find_fahrlehrerin(name).get_zugewiesenes_auto().get_kennzeichen()!=kennzeichen) {
		                                                                                            ^
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/controls/Ressourcenverwaltung.java:221: error: (dereference.of.nullable) $$ 1 $$ fahrlehrerin.get_fahrstunde() $$ ( 7093, 7122 ) $$ dereference of possibly-null reference fahrlehrerin.get_fahrstunde()
			if (fahrlehrerin.get_fahrstunde().size()==0) {
			                               ^
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/controls/Unterrichtsverwaltung.java:83: error: (dereference.of.nullable) $$ 1 $$ this.theoriestunde.get(i).get_fahrlehrerindaten() $$ ( 2675, 2724 ) $$ dereference of possibly-null reference this.theoriestunde.get(i).get_fahrlehrerindaten()
					text = text + "Lehrerin: " + this.theoriestunde.get(i).get_fahrlehrerindaten().get_name() 
					                                                                            ^
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/controls/Unterrichtsverwaltung.java:201: error: (dereference.of.nullable) $$ 1 $$ this.find_fahrschueler(schuelerID) $$ ( 7535, 7569 ) $$ dereference of possibly-null reference this.find_fahrschueler(schuelerID)
		if (!this.find_fahrschueler(schuelerID).get_fahrlehrerindaten().verfuegbar(beginn, end)
		                           ^
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/controls/Unterrichtsverwaltung.java:201: error: (dereference.of.nullable) $$ 1 $$ this.find_fahrschueler(schuelerID).get_fahrlehrerindaten() $$ ( 7535, 7593 ) $$ dereference of possibly-null reference this.find_fahrschueler(schuelerID).get_fahrlehrerindaten()
		if (!this.find_fahrschueler(schuelerID).get_fahrlehrerindaten().verfuegbar(beginn, end)
		                                                             ^
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/controls/Unterrichtsverwaltung.java:244: error: (dereference.of.nullable) $$ 1 $$ fahrschueler $$ ( 9670, 9682 ) $$ dereference of possibly-null reference fahrschueler
		for (int i=0;i<fahrschueler.get_fahrstunde().size();i++) {
		               ^
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/controls/Unterrichtsverwaltung.java:248: error: (dereference.of.nullable) $$ 1 $$ fahrschueler.get_fahrlehrerindaten() $$ ( 9882, 9918 ) $$ dereference of possibly-null reference fahrschueler.get_fahrlehrerindaten()
				fahrschueler.get_fahrlehrerindaten().get_fahrstunde().remove(fs);
				                                  ^
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/controls/Unterrichtsverwaltung.java:248: error: (dereference.of.nullable) $$ 1 $$ fahrschueler.get_fahrlehrerindaten().get_fahrstunde() $$ ( 9882, 9935 ) $$ dereference of possibly-null reference fahrschueler.get_fahrlehrerindaten().get_fahrstunde()
				fahrschueler.get_fahrlehrerindaten().get_fahrstunde().remove(fs);
				                                                   ^
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/controls/Unterrichtsverwaltung.java:287: error: (dereference.of.nullable) $$ 1 $$ schueler $$ ( 11822, 11830 ) $$ dereference of possibly-null reference schueler
		boolean bereits_besucht = schueler.find_theoriestunde(stunde);
		                          ^
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/controls/Unterrichtsverwaltung.java:293: error: (dereference.of.nullable) $$ 1 $$ stunde $$ ( 12069, 12075 ) $$ dereference of possibly-null reference stunde
			int thema = stunde.get_thema();
			            ^
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/controls/Pruefungsverwaltung.java:55: error: (dereference.of.nullable) $$ 1 $$ fahrschueler $$ ( 1976, 1988 ) $$ dereference of possibly-null reference fahrschueler
		if (fahrschueler.get_anzahl_grundlagenstunden()<12) {
		    ^
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/controls/Pruefungsverwaltung.java:87: error: (dereference.of.nullable) $$ 1 $$ fahrschueler $$ ( 3176, 3188 ) $$ dereference of possibly-null reference fahrschueler
			fahrschueler.set_theoriepruefungsstatus("Bestanden!");
			^
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/controls/Pruefungsverwaltung.java:129: error: (dereference.of.nullable) $$ 1 $$ fahrschueler $$ ( 5359, 5371 ) $$ dereference of possibly-null reference fahrschueler
		besucht_fahrstunden = fahrschueler.get_anzahl_fahrstunden();
		                      ^
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/controls/Pruefungsverwaltung.java:140: error: (dereference.of.nullable) $$ 1 $$ fahrschueler.get_fahrlehrerindaten() $$ ( 5881, 5917 ) $$ dereference of possibly-null reference fahrschueler.get_fahrlehrerindaten()
				if (!fahrschueler.get_fahrlehrerindaten().verfuegbar(beginn,end)) {
				                                       ^
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/tests/BeispielTest.java:34: error: (dereference.of.nullable) $$ 1 $$ sekretaerBoundary $$ ( 1074, 1091 ) $$ dereference of possibly-null reference sekretaerBoundary
		Systemereignis systemereignis = sekretaerBoundary
		                                ^
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/tests/BeispielTest.java:98: error: (dereference.of.nullable) $$ 1 $$ fahrlehrerinBoundary $$ ( 3304, 3324 ) $$ dereference of possibly-null reference fahrlehrerinBoundary
		System.out.println(fahrlehrerinBoundary
		                   ^
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/tests/Test.java:105: error: (dereference.of.nullable) $$ 1 $$ sekretaerBoundary $$ ( 3881, 3898 ) $$ dereference of possibly-null reference sekretaerBoundary
		Systemereignis systemereignis = sekretaerBoundary
		                                ^
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/tests/Test.java:387: error: (dereference.of.nullable) $$ 1 $$ fahrlehrerinBoundary $$ ( 16195, 16215 ) $$ dereference of possibly-null reference fahrlehrerinBoundary
		systemereignis = fahrlehrerinBoundary.einloggenUndUnterrichtsstundenZurueckgeben("Yang", "B-GHJ1386");
		                 ^
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
26 errors
